Bug 92357 - Tab type switcher in ruler does not clear previous icon when clicking it
Summary: Tab type switcher in ruler does not clear previous icon when clicking it
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.0.beta3
Hardware: Other All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.2
Keywords: bibisected, regression
: 93313 93375 93671 93861 93984 94383 (view as bug list)
Depends on:
Blocks: RenderContext
  Show dependency treegraph
 
Reported: 2015-06-26 16:05 UTC by Matthias Fuchs
Modified: 2016-10-25 19:20 UTC (History)
11 users (show)

See Also:
Crash report or crash signature:


Attachments
look at the circle (16.05 KB, image/png)
2015-06-26 16:05 UTC, Matthias Fuchs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matthias Fuchs 2015-06-26 16:05:21 UTC
Created attachment 116848 [details]
look at the circle

HI,

when I repeatedly click on the tab type switcher in the ruler bar (left top) then it get's drawn incorrectly. Look at the screenshot.
If I unfocus the window it's getting drawn correctly again.
Comment 1 Adolfo Jayme Barrientos 2015-06-28 03:27:39 UTC
Confirmed in Linux with version 5.1.0.0.alpha1+.

This is probably related to the recent refactorings in VCL.
Comment 2 Óvári 2015-07-14 02:59:47 UTC
Confirmed in Windows 8.1
LO version: 5.0.0.3 (x64)
Build ID: f79b5ba13f5e6cbad23f8038060e556217e66632
Comment 3 Michael Weghorn 2015-07-17 20:03:21 UTC
bibisect result (using lo-linux-dbgutil-daily repository):
 8d4474d6d255ef57a1b4b86653d7edf26b676494 is the first bad commit
commit 8d4474d6d255ef57a1b4b86653d7edf26b676494
Author: Miklos Vajna <vmiklos@collabora.co.uk>
Date:   Thu Jun 4 04:42:41 2015 +0200

    2015-06-04: source-hash-8ae25bbc092254f680e2976873f15bdbc26615ef

:100644 100644 a63f5df0ab9d5994873629901c81b317dcbaa96f 943ec776f44261db27c3e47f8a2f951516945f7a M	build-info.txt
:040000 040000 89bcb2d10e11cdfa9c3eacff92b5b442a8b514da dd6856c5247bf5c2437756ae9024351dce9ccd6b M	opt

---

$ git bisect log
# bad: [6e6e48df3b6eb13cf54223cd1ffac16546ec49c2] 2015-07-17: source-hash-14257152b19c08618a107c6eb0f684de11483da8
# good: [2b392af9c8f54629e3a3a98a8c92fa5af1c6722f] 2015-05-20: source-hash-90e2dabb8d0bb5382234be776c2ad0e2d5d9e224
git bisect start '6e6e48df3b6eb13cf54223cd1ffac16546ec49c2' '2b392af9c8f54629e3a3a98a8c92fa5af1c6722f'
# bad: [e48eb783142c667bfdad999f0edb90f8253b0b65] 2015-06-18: source-hash-fb6dd2a73074b9695bd8ddf7ba40f1819b03024e
git bisect bad e48eb783142c667bfdad999f0edb90f8253b0b65
# good: [150ec5e84c651237c49a4d3f6b902513bb14b5a8] 2015-06-03: source-hash-9f01951b858453684f2622541af0eb85d4544fc6
git bisect good 150ec5e84c651237c49a4d3f6b902513bb14b5a8
# bad: [a814cee0b38cabf6a0c042e9bcc616c8d96cac0f] 2015-06-10: source-hash-782c116b5ac39aef27c3a00f7fc145c9f755e3a3
git bisect bad a814cee0b38cabf6a0c042e9bcc616c8d96cac0f
# bad: [2ff6fad6384c0192ea61bd9a163c8df3818ba8b3] 2015-06-06: source-hash-587006cac508616f486aea45e265a170bcccdc87
git bisect bad 2ff6fad6384c0192ea61bd9a163c8df3818ba8b3
# bad: [d2fd284bede0e9cfd042f71211577d1d15c5e509] 2015-06-05: source-hash-856233d2ef20ba0f4118edd475308bd59442068c
git bisect bad d2fd284bede0e9cfd042f71211577d1d15c5e509
# bad: [8d4474d6d255ef57a1b4b86653d7edf26b676494] 2015-06-04: source-hash-8ae25bbc092254f680e2976873f15bdbc26615ef
git bisect bad 8d4474d6d255ef57a1b4b86653d7edf26b676494
# first bad commit: [8d4474d6d255ef57a1b4b86653d7edf26b676494] 2015-06-04: source-hash-8ae25bbc092254f680e2976873f15bdbc26615ef
Comment 4 Adolfo Jayme Barrientos 2015-08-10 04:03:49 UTC
*** Bug 93313 has been marked as a duplicate of this bug. ***
Comment 5 Jacques Guilleron 2015-08-13 23:41:08 UTC
*** Bug 93375 has been marked as a duplicate of this bug. ***
Comment 6 Maxim Monastirsky 2015-09-02 16:27:36 UTC
*** Bug 93671 has been marked as a duplicate of this bug. ***
Comment 7 Maxim Monastirsky 2015-09-02 16:28:26 UTC
*** Bug 93861 has been marked as a duplicate of this bug. ***
Comment 8 Cor Nouws 2015-09-02 18:36:56 UTC
Adding cc: caolan
see comment 3.
Comment 9 Maxim Monastirsky 2015-09-02 19:30:19 UTC
(In reply to Cor Nouws from comment #8)
> Adding cc: caolan
> see comment 3.
How did you come to this conclusion? If anything in this bibisect range, I would actually suspect this one:

commit f64588a9238cf0cb122c43d927d73822eca3b6ae
Author: Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>
Date:   Wed Jun 3 17:49:41 2015 +0900

    tdf#91677 fix flickering ruler
    
    Change-Id: Ia14be98fbfd46871b2ac9bd42a07951d86722a8a
Comment 10 Cor Nouws 2015-09-07 09:40:47 UTC
*** Bug 93984 has been marked as a duplicate of this bug. ***
Comment 11 Cor Nouws 2015-09-07 09:45:11 UTC
(In reply to Maxim Monastirsky from comment #9)
> (In reply to Cor Nouws from comment #8)
> > Adding cc: caolan
> > see comment 3.
> How did you come to this conclusion? 

Misinterpretation, prolly.

> If anything in this bibisect range, I would actually suspect this one:
> 
> commit f64588a9238cf0cb122c43d927d73822eca3b6ae
> Author: Tomaž Vajngerl <tomaz.vajngerl@collabora.co.uk>
> Date:   Wed Jun 3 17:49:41 2015 +0900
> 
>     tdf#91677 fix flickering ruler
>     
>     Change-Id: Ia14be98fbfd46871b2ac9bd42a07951d86722a8a
Comment 12 Commit Notification 2015-09-07 12:17:44 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e74bc6b9a61dbc80caa6d2a8bfb79b3ac61c9899

tdf#92357 clear tab type switcher button of ruler

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 László Németh 2015-09-07 13:11:36 UTC
Fixed in the master, and pushed to the gerrit for libreoffice-5.0: https://gerrit.libreoffice.org/#/c/18376/

Thanks for your help!
Comment 14 Commit Notification 2015-09-07 13:46:44 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fc94c658d688ded3fe8a883a84ca1a22cb3ff470&h=libreoffice-5-0

tdf#92357 clear tab type switcher button of ruler

It will be available in 5.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2015-09-11 08:07:58 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-5-0-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3dae249c7bb0919d39dc88816d6ec38fb2b54e09&h=libreoffice-5-0-2

tdf#92357 clear tab type switcher button of ruler

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Maxim Monastirsky 2015-09-21 13:04:48 UTC
*** Bug 94383 has been marked as a duplicate of this bug. ***
Comment 17 Robinson Tryon (qubit) 2015-12-17 09:15:00 UTC Comment hidden (noise)