tdf#92357 clear tab type switcher button of ruler

before drawing the new icon

Change-Id: Ibbdbed448f965848429ace28dcfae47efc982164