svtools/source/control/ruler.cxx
@@ -2528,7 +2528,7 @@ void Ruler::SetExtraType( RulerExtra eNewExtraType, sal_uInt16 nStyle )
         meExtraType  = eNewExtraType;
         mnExtraStyle = nStyle;
         if (IsReallyVisible() && IsUpdateMode())
-            Invalidate(InvalidateFlags::NoErase);
+            Invalidate();
     }
 }
 
